--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,15 @@
             ],
             "styles": [
               "src/styles.scss"
+            ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/global-scss/variables",
+                "src/styles"
+              ]
+            },
+            "polyfills": [
+              "@angular/localize/init"
             ]
           },
           "configurations": {
@@ -82,6 +91,15 @@
             ],
             "styles": [
               "src/styles.scss"
+            ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/global-scss/variables",
+                "src/styles"
+              ]
+            },
+            "polyfills": [
+              "@angular/localize/init"
             ]
           }
         }
